--- a/package.json
+++ b/package.json
@@ -5,20 +5,49 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "dev:server": "nodemon server/server.ts",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.17",
+    "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
+    "canvas-confetti": "^1.9.3",
+    "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.0",
+    "next": "14.2.3",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-dom-confetti": "^0.2.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/bcrypt": "^5.0.2",
+    "@types/canvas-confetti": "^1.6.4",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
+    "@types/passport": "^1.0.16",
+    "@types/passport-local": "^1.0.38",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "nodemon": "^3.1.0",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
